# linux-lens

./: README.md  pyproject.toml
main/: opsearch.py
screen-search/: pyproject.toml
screen-search/main/: testinfo.md
screen-search/test/: test.py
test/: test.py
