[project]
name = "scrsearch"
version = "3.12.7"
description = "its just a tool to search using images and text extraction"
authors = [
    {name = "kiyo"}
]
license = {text = "mit"}
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "easyocr (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
